# monothematic

./: .gitignore  Cargo.toml  README.md  package.json  tsconfig.json
src/: index.ts  main.rs
src/lib/: colors.ts  config.ts  templates.ts  wallpaper.ts
templates/: gtk3.css  gtk4.css  niri.conf  noctalia-theme.json
