[package]
name = "monothematic"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1"
clap = { version = "4", features = ["derive"] }
directories = "5"
image = { version = "0.25", default-features = false, features = ["png", "jpeg", "gif", "bmp", "ico", "tiff", "webp"] }
palette = { version = "0.7", features = ["named"] }
rand = "0.8"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
toml = "0.8"
walkdir = "2"
which = "6"
serde_yaml = "0.9"
thiserror = "1"
humantime = "2"
tempfile = "3"
